Change bride name

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Izzudin&#9829;Amira</title>
+    <title>Haiqal&#9829;Linda</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="description" content="Invitation to our wedding Izzudin&Amira.">
-    <meta name="author" content="Izzudin & Amira">
-    <meta property="og:description" content="Invitation to our wedding Izzudin&Amira.">
-    <meta name="twitter:description" content="Invitation to our wedding Izzudin&Amira.">
+    <meta name="description" content="Invitation to our wedding Haiqal&Linda.">
+    <meta name="author" content="Haiqal & Linda">
+    <meta property="og:description" content="Invitation to our wedding Haiqal&Linda.">
+    <meta name="twitter:description" content="Invitation to our wedding Haiqal&Linda.">
 
 
     <link rel="shortcut icon" href="img/icon-2.png">
@@ -97,11 +97,11 @@
                     </div>
 
                     <div class="pg1-title2-group" translate="no">
-                        Izzudin
+                        Haiqal
                         <div>
                             &
                         </div>
-                        Amira
+                        Linda
                     </div>
 
                     <div class="fs-6 fw-bolder font-type-machine">
