--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                             href="https://www.google.com/calendar/render?action=TEMPLATE&text=Wedding%20Izzudin%20x%20Amira&details=Assalamualaikum%20W.B.T%20%26%20Salam%20Sejahtera.%0A%0ADengan%20izin%20Allah%20S.W.T%20ke%20atas%20hambaNya%20yang%20merancang%2C%20kami%20dengan%20segala%20hormat%20dan%20penuh%20kesyukuran%20menjemput%20YBhg.%20Datuk%2FDato'%2FDatin%2FTuan%2FPuan%20ke%20majlis%20persandingan%20putera%20%26%20puteri%20kami%20yang%20dikasihi%0A%0AMOHD%20IZZUDIN%20BIN%20RAZALI%20%26%20AMIRA%20RASHIDAH%20BINTI%20MAD%20DAUD%0A%0ATARIKH%20%2F%20DATE%0ASABTU%2C%2025%20FEB%202023%0A%0AMASA%20%2F%20TIME%0A11%3A30%20AM%20-%204%3A00&location=https%3A%2F%2Fgoo.gl%2Fmaps%2FyZXWnQJkxnBPa2KJ7&dates=20230225T033000Z%2F20230225T080000Z&ctz=Asia%2FKuala_Lumpur">
                             <img src="icons/calendar.png" class="icon-white" />
                             <br />
-                            <small>Ingatkan saya</small>
+                            <small>Ingatkan saya ...</small>
                         </a>
                     </li>
                     <li class="col">
