--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     </div>
 
                     <div class="fs-6 fw-bolder font-type-machine">
-                        SABTU | 25 FEB 2023 <br />
-                        <span translate="no">DEWAN MAHLIGAI SERI NILAI</span>
+                        AHAD | 10 SEPT 2023 <br />
+                        <span translate="no">MZ Fountain Hall</span>
                     </div>
 
                 </div>
@@ -147,11 +147,11 @@
 
                     <div class="row pt-4 pb-2 fs-5 font-type-cursive" translate="no">
                         <div class="col-5 p-0 m-auto">
-                            Mohd Izzudin
+                            Mohamad Haiqal Bin Halim
                         </div>
                         <div class="col p-0  m-auto">&</div>
                         <div class="col-5 p-0 m-auto">
-                            Amira Rashidah
+                            Mas Linda Binti Mohmad
                         </div>
                     </div>
                 </div>
