--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 
                     <div class="row pt-4 pb-2 fs-5 font-type-cursive" translate="no">
                         <div class="col-5 p-0 m-auto">
-                            Mohamad Haiqal Bin Halim
+                            Mohamad Haiqal
                         </div>
                         <div class="col p-0  m-auto">&</div>
                         <div class="col-5 p-0 m-auto">
-                            Mas Linda Binti Mohmad
+                            Mas Linda
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                 <div class="z-index-100 position-relative">
                     <div class="pb-3">
                         <div class="f-">TARIKH</div>
-                        <div class="font-type-machine fw-bolder"> SABTU, 25 FEB 2023</div>
+                        <div class="font-type-machine fw-bolder"> AHAD, 10 SEP 2023</div>
                     </div>
 
                     <div class="pb-3">
@@ -176,7 +176,7 @@
                     </div>
                     <div class="">
                         <div>TEMPAT</div>
-                        <div class="font-type-machine fw-bolder" translate="no">DEWAN MAHLIGAI SERI NILAI, N9</div>
+                        <div class="font-type-machine fw-bolder" translate="no">MZ Fountain Hall, Kampung Sg Ramal Luar, Kajang</div>
                     </div>
                 </div>
             </div>
