change parent's name

--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
 
                     <div class="row py-4 fs-5 font-type-cursive" translate="no">
                         <div class="col-5 p-2 m-auto">
-                            Tn. Hj. Razali Bin Hj. Ibrahim
+                            Tn. Halim Bin Haron
                             <div>&</div>
-                            Pn. Hjh. Izan Binti Hj. Ahmad
+                            Pn. Ramlah Binti Mohammed
                         </div>
                         <div class="col pg2-line p-0"></div>
                         <div class="col-5 p-2 m-auto">
-                            Tn. Mad Daud Bin Sukarmin
+                            Tn. Mohmad Bin Hussin
                             <div>&</div>
-                            Pn. Rozita Binti Hashim
+                            Pn. Norizan Binti Senin
                         </div>
                     </div>
 
@@ -258,33 +258,13 @@
                     </p>
 
                     <p class="">
-                        <mark class="text-bg-dark" translate="no">#IzzudinxAmira</mark>
+                        <mark class="text-bg-dark" translate="no">#LindaAndHaiqalTieTheKnot</mark>
                     </p>
                 </div>
             </div>
         </div>
         <div class="col-lg "></div>
     </div>
-
-    <!-- MODAL FORM RSVP -->
-    <!-- <div class="modal fade" id="rsvpmodal" tabindex="-1" aria-labelledby="rsvpmodalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- endmodal -->
 </body>
 
 <script>
