Change address and Title

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li class="col">
-                        <a class="nav-link" target="_blank" href="https://waze.com/ul/hw282k82ku">
+                        <a class="nav-link" target="_blank" href="https://waze.com/ul/hw282gwxn9">
                             <img src="icons/waze-white.svg" class="icon-white" />
                             <br />
                             <small>Waze</small>
@@ -74,7 +74,7 @@
                     </li>
                     <li class="col">
                         <a class="nav-link" target="_blank"
-                            href="https://www.google.com/maps/place/DEWAN+MAHLIGAI+SERI+NILAI/@2.8590778,101.7978753,17z/data=!3m1!4b1!4m5!3m4!1s0x31cdc5e6ce8449ed:0x72b6f43a3819e510!8m2!3d2.8590724!4d101.800064?shorturl=1">
+                            href="https://goo.gl/maps/rLwwbjvmgct89f5n6">
                             <img src="icons/googlemap-white.svg" class="icon-white" />
                             <br />
                             <small>Google Map</small>
@@ -123,13 +123,13 @@
 
                     <div class="row py-4 fs-5 font-type-cursive" translate="no">
                         <div class="col-5 p-2 m-auto">
-                            Tn. Halim Bin Haron
+                            En. Halim Bin Haron
                             <div>&</div>
                             Pn. Ramlah Binti Mohammed
                         </div>
                         <div class="col pg2-line p-0"></div>
                         <div class="col-5 p-2 m-auto">
-                            Tn. Mohmad Bin Hussin
+                            En. Mohmad Bin Hussin
                             <div>&</div>
                             Pn. Norizan Binti Senin
                         </div>
