--- a/index.html
+++ b/index.html
@@ -187,28 +187,28 @@
                     <br />
                     <div class="fw-bolder">Keluarga Pihak Lelaki</div>
                     <dl class="row">
-                        <dt class="col-6 py-2 m-auto" translate="no">Tn. Hj. Razali</dt>
+                        <dt class="col-6 py-2 m-auto" translate="no">En. Halim</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60199854409&text=#IzzudinxAmira');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60123917203&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
-                                onclick="window.open('tel:0189000415');">
+                                onclick="window.open('tel:0123917203');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto" translate="no">Pn. Hjh Izan</dt>
+                        <dt class="col-6 py-2 m-auto" translate="no">Pn. Ramlah</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60133923540&text=#IzzudinxAmira');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60162679646&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
-                                onclick="window.open('tel:0189000415');">
+                                onclick="window.open('tel:0162679646');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto" translate="no">Najib</dt>
+                        <dt class="col-6 py-2 m-auto" translate="no">Pn. Roshafiza</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60126158550&text=#IzzudinxAmira');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60148494771&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
-                                onclick="window.open('tel:0189000415');">
+                                onclick="window.open('tel:60148494771');">
                         </dd>
                     </dl>
 
@@ -219,7 +219,7 @@
                         <dt class="col-6 py-2 m-auto" translate="no">Tn. Mad Daud (WIP)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#IzzudinxAmira');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
                                 onclick="window.open('tel:0189000415');">
                         </dd>
@@ -227,7 +227,7 @@
                         <dt class="col-6 py-2 m-auto" translate="no">Pn. Rozita</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60196502724&text=#IzzudinxAmira');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60196502724&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
                                 onclick="window.open('tel:0189000415');">
                         </dd>
@@ -235,7 +235,7 @@
                         <dt class="col-6 py-2 m-auto">Amirul (WIP)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#IzzudinxAmira');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
                                 onclick="window.open('tel:0189000415');">
                         </dd>
