Change the font family, font-size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <meta property="og:description" content="Invitation to our wedding Haiqal&Linda.">
     <meta name="twitter:description" content="Invitation to our wedding Haiqal&Linda.">
 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/icon-2.png">
     <link rel="icon" href="img/icon-2.png" sizes="192x192">
     <link rel="apple-touch-icon" href="img/icon-2.png">
@@ -29,7 +31,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-
 </head>
 
 <body class="container-fluid">
@@ -92,19 +93,13 @@
                 </div> -->
                 <div id="pg1-bg"></div>
                 <div class="z-index-100">
-                    <div>
+                    <div class="poppin-font" style="font-weight: 600;font-size:27px;">
                         WALIMATUL URUS
                     </div>
-
-                    <div class="pg1-title2-group" translate="no">
-                        Haiqal
-                        <div>
-                            &
-                        </div>
-                        Linda
+                    <div class="great-vibe-font my-5" translate="no" style="font-weight: 500;font-size:70px;">
+                        Haiqal & Linda
                     </div>
-
-                    <div class="fs-6 fw-bolder font-type-machine">
+                    <div class="poppin-font" style="font-weight: 600;font-size:27px;">
                         AHAD | 10 SEPT 2023 <br />
                         <span translate="no">MZ Fountain Hall</span>
                     </div>
@@ -117,41 +112,35 @@
             <div id="pg2" class="position-relative ">
                 <div id="pg2-bg"></div>
                 <div class="text-center px-4 py-4 z-index-100 position-relative">
-                    <div class="pg2-title">
+                    <div class="poppin-font subtext-font-weight text-title-font-size">
                         WALIMATUL URUS
                     </div>
 
                     <div class="row py-4 fs-5 font-type-cursive" translate="no">
-                        <div class="col-5 p-2 m-auto">
+                        <div class="col-5 p-2 m-auto poppin-font subtext-font-weight subtext-font-size">
                             En. Halim Bin Haron
                             <div>&</div>
                             Pn. Ramlah Binti Mohammed
                         </div>
                         <div class="col pg2-line p-0"></div>
-                        <div class="col-5 p-2 m-auto">
+                        <div class="col-5 p-2 m-auto poppin-font subtext-font-weight subtext-font-size">
                             En. Mohmad Bin Hussin
                             <div>&</div>
-                            Pn. Norizan Binti Senin
+                            Pn. Norizan Binti <br> Senin
                         </div>
                     </div>
-
-                    <!-- 
-                <div class="">
-                    Assalamualaikum W.B.T & Salam Sejahtera.
-                </div> -->
-
-                    <div class="">
+                    <div class="poppin-font subtext-font-weight" style="font-size:15px;">
                         Dengan penuh kesyukuran kehadrat Illahi, kami mempersilakan Dato'/Datin/Tuan/Puan/Encik/Cik
                         ke majlis perkahwinan putera dan puteri kesayangan kami
                     </div>
 
-                    <div class="row pt-4 pb-2 fs-5 font-type-cursive" translate="no">
-                        <div class="col-5 p-0 m-auto">
-                            Mohamad Haiqal
+                    <div class="row pt-4 pb-2 fs-5" translate="no">
+                        <div class="col-5 p-0 m-auto  poppin-font subtext-font-weight subtext-font-size">
+                            Mohamad Haiqal Bin Halim
                         </div>
-                        <div class="col p-0  m-auto">&</div>
-                        <div class="col-5 p-0 m-auto">
-                            Mas Linda
+                        <div class="col p-0  m-auto  poppin-font subtext-font-weight subtext-font-size">&</div>
+                        <div class="col-5 p-0 m-auto  poppin-font subtext-font-weight subtext-font-size">
+                            Mas Linda Binti <br> Mohmad
                         </div>
                     </div>
                 </div>
@@ -163,31 +152,31 @@
                 <div id="pg-detail-bg"></div>
                 <div class="z-index-100 position-relative">
                     <div class="pb-3">
-                        <div class="f-">TARIKH</div>
-                        <div class="font-type-machine fw-bolder"> AHAD, 10 SEP 2023</div>
+                        <div class="poppin-font subtext-font-weight text-title-font-size">TARIKH</div>
+                        <div class="poppin-font subtext-font-weight subtext-font-size"> AHAD, 10 SEP 2023</div>
                     </div>
 
                     <div class="pb-3">
-                        <div>MASA</div>
-                        <div class="font-type-machine fw-bolder">11:30 AM - 4:00 PM</div>
-                        <div class="font-type-machine fw-bolder">
+                        <div class="poppin-font subtext-font-weight text-title-font-size">MASA</div>
+                        <div class="poppin-font subtext-font-weight subtext-font-size">11:30 AM - 4:00 PM</div>
+                        <div class="poppin-font subtext-font-weight subtext-font-size">
                             <span>Ketibaan Pengantin</span>: 12.30 PM
                         </div>
                     </div>
                     <div class="">
-                        <div>TEMPAT</div>
-                        <div class="font-type-machine fw-bolder" translate="no">MZ Fountain Hall, Kampung Sg Ramal Luar, Kajang</div>
+                        <div class="poppin-font subtext-font-weight text-title-font-size">TEMPAT</div>
+                        <div class="poppin-font subtext-font-weight subtext-font-size" translate="no">MZ Fountain Hall, Kampung Sg Ramal Luar, Kajang</div>
                     </div>
                 </div>
             </div>
             <div id="pg-call" class="details d-flex p-4 position-relative">
                 <div id="pg2-bg"></div>
                 <div class="z-index-100 position-relative">
-                    <h6>~Hubungi~</h6>
+                    <div class="poppin-font subtext-font-weight text-title-font-size">Hubungi</div>
                     <br />
-                    <div class="fw-bolder">Keluarga Pihak Lelaki</div>
+                    <div class="poppin-font subtext-font-weight text-title-font-size">Keluarga Pihak Lelaki</div>
                     <dl class="row">
-                        <dt class="col-6 py-2 m-auto" translate="no">En. Halim</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">En. Halim</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
                                 onclick="window.open('https://api.whatsapp.com/send?phone=60123917203&text=#HaiqalxLinda');">
@@ -195,7 +184,7 @@
                                 onclick="window.open('tel:0123917203');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto" translate="no">Pn. Ramlah</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Pn. Ramlah</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
                                 onclick="window.open('https://api.whatsapp.com/send?phone=60162679646&text=#HaiqalxLinda');">
@@ -203,7 +192,7 @@
                                 onclick="window.open('tel:0162679646');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto" translate="no">Pn. Roshafiza</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Pn. Roshafiza</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
                                 onclick="window.open('https://api.whatsapp.com/send?phone=60148494771&text=#HaiqalxLinda');">
@@ -214,9 +203,9 @@
 
                     <br />
 
-                    <div class="fw-bolder">Keluarga Pihak Perempuan</div>
+                    <div class="poppin-font subtext-font-weight text-title-font-size">Keluarga Pihak Perempuan</div>
                     <dl class="row">
-                        <dt class="col-6 py-2 m-auto" translate="no">Tn. Mad Daud (WIP)</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Tn. Mad Daud (WIP)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
                                 onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#HaiqalxLinda');">
@@ -224,7 +213,7 @@
                                 onclick="window.open('tel:0189000415');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto" translate="no">Pn. Rozita</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Pn. Rozita</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
                                 onclick="window.open('https://api.whatsapp.com/send?phone=60196502724&text=#HaiqalxLinda');">
@@ -232,7 +221,7 @@
                                 onclick="window.open('tel:0189000415');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto">Amirul (WIP)</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size">Amirul (WIP)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
                                 onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#HaiqalxLinda');">
@@ -246,19 +235,13 @@
                 <div id="pg-end-bg"></div>
                 <div class="z-index-100">
                     <p class="p-5">
-                        <mark class="text-bg-dark">
-                            Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu
-                            dari
-                            jenismu sendiri, agar
-                            kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu rasa kasih dan
-                            sayang. Sungguh, pada yang
-                            demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir.
-                            (Ar-Rum; 21)
+                        <mark class="poppin-font subtext-font-weight subtext-font-size" style="background-color: transparent;font-style: italic;">
+                            Ya Allah Yang Maha Mencipta, Jadikanlah majlis ini majlis yang mendapat keberkatan dan keredhaanMu, kekalkanlah ikatan perkahwinan mereka sepanjang hayat, tetapkanlah kasih sayang antara mereka selagi tidak melebihi kasih padaMu.
                         </mark>
                     </p>
 
                     <p class="">
-                        <mark class="text-bg-dark" translate="no">#LindaAndHaiqalTieTheKnot</mark>
+                        <mark class="poppin-font subtext-font-weight subtext-font-size" translate="no">#LindaAndHaiqalTieTheKnot</mark>
                     </p>
                 </div>
             </div>
