edit font for button and change font-size for bride name

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             href="https://www.google.com/calendar/render?action=TEMPLATE&text=Wedding%20Izzudin%20x%20Amira&details=Assalamualaikum%20W.B.T%20%26%20Salam%20Sejahtera.%0A%0ADengan%20izin%20Allah%20S.W.T%20ke%20atas%20hambaNya%20yang%20merancang%2C%20kami%20dengan%20segala%20hormat%20dan%20penuh%20kesyukuran%20menjemput%20YBhg.%20Datuk%2FDato'%2FDatin%2FTuan%2FPuan%20ke%20majlis%20persandingan%20putera%20%26%20puteri%20kami%20yang%20dikasihi%0A%0AMOHD%20IZZUDIN%20BIN%20RAZALI%20%26%20AMIRA%20RASHIDAH%20BINTI%20MAD%20DAUD%0A%0ATARIKH%20%2F%20DATE%0ASABTU%2C%2025%20FEB%202023%0A%0AMASA%20%2F%20TIME%0A11%3A30%20AM%20-%204%3A00&location=https%3A%2F%2Fgoo.gl%2Fmaps%2FyZXWnQJkxnBPa2KJ7&dates=20230225T033000Z%2F20230225T080000Z&ctz=Asia%2FKuala_Lumpur">
                             <img src="icons/calendar.png" class="icon-white" />
                             <br />
-                            <small>Ingatkan saya ...</small>
+                            <small class="poppin-font">Ingatkan saya ...</small>
                         </a>
                     </li>
                     <li class="col">
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="#pg-call">
                             <img src="icons/call.png" class="icon-white" />
                             <br />
-                            <small>Hubungi</small>
+                            <small class="poppin-font">Hubungi</small>
                         </a>
                     </li>
                     <li class="col d-flex">
@@ -63,14 +63,14 @@
                             href="javascript:void( window.open( 'https://form.jotform.com/223404361383046', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) ">
                             <span class="rsvp font-type-cursive">RSVP</span>
                             <br />
-                            <small>Balas jemputan</small>
+                            <small class="poppin-font">Balas jemputan</small>
                         </a>
                     </li>
                     <li class="col">
                         <a class="nav-link" target="_blank" href="https://waze.com/ul/hw282gwxn9">
                             <img src="icons/waze-white.svg" class="icon-white" />
                             <br />
-                            <small>Waze</small>
+                            <small class="poppin-font">Waze</small>
                         </a>
                     </li>
                     <li class="col">
@@ -78,12 +78,12 @@
                             href="https://goo.gl/maps/rLwwbjvmgct89f5n6">
                             <img src="icons/googlemap-white.svg" class="icon-white" />
                             <br />
-                            <small>Google Map</small>
+                            <small class="poppin-font">Google Map</small>
                         </a>
                     </li>
                 </ul>
-                <ul class="w-100 m-0 text-center list-unstyled" style="color: white;">
-                    <li>Direka bentuk oleh pengantin</li>
+                <ul class="w-100 m-0 text-center list-unstyled poppin-font" style="color: white;">
+                    <li>Direka bentuk oleh Haiqal Halim</li>
                 </ul>
             </nav>
             <div id="pg1"
@@ -96,7 +96,7 @@
                     <div class="poppin-font" style="font-weight: 600;font-size:27px;">
                         WALIMATUL URUS
                     </div>
-                    <div class="great-vibe-font my-5" translate="no" style="font-weight: 500;font-size:70px;">
+                    <div class="great-vibe-font my-5" translate="no" style="font-weight: 500;font-size:4rem ;">
                         Haiqal & Linda
                     </div>
                     <div class="poppin-font" style="font-weight: 600;font-size:27px;">
