change contact person for bride

--- a/index.html
+++ b/index.html
@@ -205,28 +205,28 @@
 
                     <div class="poppin-font subtext-font-weight text-title-font-size">Keluarga Pihak Perempuan</div>
                     <dl class="row">
-                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Tn. Mad Daud (WIP)</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Julia (Adik)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#HaiqalxLinda');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60172073270&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
-                                onclick="window.open('tel:0189000415');">
+                                onclick="window.open('tel:0172073270');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Pn. Rozita</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size" translate="no">Liza (Adik)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60196502724&text=#HaiqalxLinda');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=60187629298&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
-                                onclick="window.open('tel:0189000415');">
+                                onclick="window.open('tel:0187629298');">
                         </dd>
 
-                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size">Amirul (WIP)</dt>
+                        <dt class="col-6 py-2 m-auto poppin-font subtext-font-weight subtext-font-size">Diana (Kakak)</dt>
                         <dd class="col-6 py-2 m-auto">
                             <img src="icons/whatsapp.svg" class="icon cursor-pointer"
-                                onclick="window.open('https://api.whatsapp.com/send?phone=60189000415&text=#HaiqalxLinda');">
+                                onclick="window.open('https://api.whatsapp.com/send?phone=601111275392&text=#HaiqalxLinda');">
                             <img src="icons/call-2.png" class="icon cursor-pointer"
-                                onclick="window.open('tel:0189000415');">
+                                onclick="window.open('tel:01111275392');">
                         </dd>
                     </dl>
                 </div>
